<resources>
    <string name="app_name">도매도</string>
    <string name="app_name_test">도매도 TEST</string>
    <string name="app_title">DOMAADO</string>
    <string name="permission_not_allowed">이 앱을 사용하려면 필요한 권한을 허용 해야합니다.</string>
    <string name="require_google_service_api">구글 플레이 서비스가 정상동작하지 않습니다.\n원활한 앱 서비스를 위하여 해당 서비스를 점검해 주시기 바랍니다.</string>
    <string name="intro_message_tit"><![CDATA[시장에서 집으로 가장 신선한 제품을 가장 빠르게]]></string>
    <string name="call_row_elapsedtime">조금 전</string>
    <string name="call_row_elapsedtime_min">%1$s분전</string>
    <string name="call_row_elapsedtime_hour">%1$s:%2$s분전</string>
    <string name="driver_delevery_report_fail">실시간 위치를 공유하지 못했습니다.</string>
    <string name="driver_location_reporting">이동정보를 공유하고 있습니다.</string>
    <string name="can_not_next_no_more_photo">촬영된 사진이 없습니다.\n사진을 촬영해 주시기 바랍니다.</string>
    <string name="camera_shot_limit">최소 %1$s장의 사진을 촬영해 주세요.</string>
    <string name="camera_item1">정면</string>
    <string name="camera_item2">앞우측휀더</string>
    <string name="camera_item3">우측측면</string>
    <string name="camera_item4">뒤우측휀더</string>
    <string name="camera_item5">뒷면</string>
    <string name="camera_item6">뒤좌측휀더</string>
    <string name="camera_item7">좌측측면</string>
    <string name="camera_item8">앞좌측휀더</string>
    <string name="camera_item9">상단/하단</string>
    <string name="camera_item10">기타1</string>
    <string name="camera_item11">기타2</string>
    <string name="camera_item12">기타3</string>
    <string name="conn_issue_desc1">서버와 통신이 원활하지 않습니다.</string>
    <string name="conn_issue_desc2">인터넷 연결상태를 확인해주세요.</string>
    <string name="custom_dialog_default_mesg">Customized Dialog</string>
    <string name="dialog_new_version">새 버전이 출시되었습니다.\n지금 업데이트 하시겠습니까?</string>
    <string name="dialog_gps_setup">정확한 현 위치 파악을 위해 위치서비스를 켜 주세요.</string>
    <string name="dialog_allow_noti">월활한 서비스 이용을 위하여 앱 알림을 허용해 주세요.</string>
    <string name="dialog_do_exit">종료하시겠습니까?</string>
    <string name="dialog_error_title">오류</string>
    <string name="dialog_notify_title">알림</string>
    <string name="twicback_to_exit_message">두번 연속으로 누르면 종료됩니다.</string>
    <string name="webview_ssl_error">이 사이트의 보안 인증서는 신뢰할 수 없습니다.</string>
    <string name="file_choose_title">파일 가져올 방법 선택</string>
    <string name="check_api_server" translatable="false">Checking Server..</string>
    <string name="can_not_connect_server">Unable to contact server.</string>
    <string name="server_loading_message">Contacting server...</string>
    <string name="server_response_error">Unstable server connection.</string>
    <string name="server_image_download">Loading images...</string>
    <string name="server_json_data_error">서버오류입니다.</string>
    <string name="server_json_string_error">데이터에 오류가 있습니다.</string>
    <string name="server_json_empty_list">데이터가 없습니다.</string>
    <string name="server_have_update">새 앱이 등록되어 있습니다.\n지금 업데이트할까요?</string>
    <string name="setting_check_internet">An internet connection is required to use the service.</string>
    <string name="setting_check_gps">정확한 위치정보 사용을 위하여 GPS를 활성화 하셔야 합니다.</string>
    <string name="setting_check_bluetooth">Bluetooth must be enabled to use indoor navigation and AR view.</string>
    <string name="permission_alert_title">앱 권한요청</string>
    <string name="permission_alert_body"><![CDATA[원활한 서비스 이용을 위하여 다음 사용권한을 허용하셔야 합니다.]]></string>
    <string name="permission_default_mesg"><![CDATA[앱 구동을 위한 기본 권한이 허용되지 않을경우 앱을 정상적으로 실행되지 않습니다.]]></string>
    <string name="permission_all_message">어플리케이션의 원활한 동작을 위한 앱 권한이 승인되지 않았습니다.\n일부 서비스 이용중 요류가 발생할 수 있습니다.</string>
    <string name="permission_gps_message"><![CDATA[원활한 서비스 제공을 위하여 현재 위치 정보를 사용하고자 합니다.]]></string>
    <string name="permission_gps_fine_message"><![CDATA[원활한 서비스 제공을 위하여 현재 LTE를 통한 위치 정보를 사용하고자 합니다.]]></string>
    <string name="permission_back_gps_message"><![CDATA[원활한 서비스 제공을 위하여 현재 위치 정보를 백그라운드모두에서 사용하고자 합니다.]]></string>
    <string name="permission_ble_message"><![CDATA[원활한 서비스 제공을 위하여 블루투스 정보를 사용하고자 합니다.]]></string>
    <string name="permission_phone_message"><![CDATA[전화발신 권한을 사용하고자 합니다.]]></string>
    <string name="permission_contacts_message"><![CDATA[전화번호부 권한을 사용하고자 합니다.]]></string>
    <string name="permission_camera_message"><![CDATA[원활한 서비스 제공을 위하여 카메라를 사용하고자 합니다.]]></string>
    <string name="permission_account_message"><![CDATA[원활한 서비스 제공을 위하여 단말 계정 정보를 사용하고자 합니다.]]></string>
    <string name="permission_storage_message"><![CDATA[원활한 서비스 제공을 위하여 저장장치를 사용하고자 합니다.]]></string>
    <string name="permission_phonenumber_message"><![CDATA[원활한 서비스 제공을 위하여 단말 계정 정보를 사용하고자 합니다.]]></string>
    <string name="permission_audio_record"><![CDATA[원활한 서비스 제공을 위하여 마이크장치를 사용하고자 합니다.]]></string>
    <string name="permission_outgoing_message"><![CDATA[원활한 서비스 제공을 위하여 전화 발신정보를 확인하고자 합니다.]]></string>
    <string name="permission_incomming_message"><![CDATA[원활한 서비스 제공을 위하여 SMS 수신정보를 확인하고자 합니다.]]></string>
    <string name="permission_error_message">해당 서비스의 동작을 위한 앱 권한이 승인되지 않았습니다.\n권한이 거부된 경우 해당 서비스를 이용하실 수 없습니다.</string>
    <string name="update_check_error">일시적인 서버오류가 발생하였습니다.</string>
    <string name="url_site" translatable="false">https://domaado.me</string>
    <string name="url_site_test" translatable="false">https://test.domaado.me</string>
    <string name="url_api_site" translatable="false">https://trans.domaado.me</string>
    <string name="url_api_site_test" translatable="false">https://trans.dev.domaado.me</string>
    <string name="path" translatable="false">/Domaado</string>
    <string name="url_update_location" translatable="false">/update_location</string>
    <string name="url_check_update" translatable="false">/check_update</string>
    <string name="url_profile_update" translatable="false">/profile_update</string>
    <string name="url_photo_upload" translatable="false">/photo_upload</string>
    <string name="share_url" translatable="false">/share</string>
    <string name="share_image_url" translatable="false">/share_image</string>
    <string name="url_push_content" translatable="false"><![CDATA[/push?msg_idx=1123&user_idx=11]]></string>
    <string name="file_download_title">파일 다운로드…</string>
    <string name="file_downloading_message">파일을 다운로드 중입니다.</string>
    <string name="open_url_message" translatable="false">새로운 알림이 도착했습니다.</string>
    <string name="url_webcontent_main" translatable="false"><![CDATA[/?vipptsid=android&device_id=%1$s]]></string>
    <string name="progress_default_message"><![CDATA[Waiting...]]></string>
    <string name="not_found_browser">이용에 불편을 드려 죄송합니다.\n사용가능한 브라우저를 찾을 수 없습니다.</string>
    <string name="btn_yes">예</string>
    <string name="btn_neutral">아니오</string>
    <string name="btn_no">아니오</string>
    <string name="btn_ok">확인</string>
    <string name="btn_retry">재시도</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_close">닫기</string>
    <string name="btn_next">다음</string>
    <string name="btn_create">생성</string>
    <string name="btn_select">선택</string>
    <string name="btn_open">열기</string>
    <string name="btn_save">저장</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_setting">설정</string>
    <string name="btn_skip">건너뛰기</string>
    <string name="btn_renew">새로고침</string>
    <string name="btn_finish">종료</string>
    <string name="btn_7dayskeep">7일동안 보지않기</string>
    <string name="btn_use">사용합니다</string>
    <string name="btn_payment">결제요청</string>
    <string name="btn_call_center">콜센터</string>
    <string name="btn_cancel_order">접수취소</string>
    <string name="btn_allright">맞습니다</string>
    <string name="btn_wrong">틀립니다</string>
    <string name="btn_detail">자세히보기</string>
    <string name="btn_favorites">즐겨찾기</string>
    <string name="btn_call_phone">전화걸기</string>
    <string name="btn_go">찾아가기</string>
    <string name="btn_confirm">완료</string>
    <string name="btn_view">보기</string>
    <string name="btn_shot">촬영</string>
    <string name="btn_shot_count">%1$s/%2$s 촬영</string>
    <string name="btn_base_shoot">기본카메라</string>
    <string name="btn_card_pay">카드결제</string>
    <string name="btn_cash_pay">현금결제</string>
    <string name="btn_term_pay">단말기결제</string>
    <string name="btn_always">항상</string>
    <string name="btn_once">이번만</string>
    <string name="btn_continue">계속</string>
    <string name="choose_camera_app">선택해주세요</string>
    <string name="btn_gallery">갤러리</string>
    <string name="btn_camera">카메라</string>
    <string name="sub_title_text">Recent history</string>
    <string name="sub_title_edit_text">Edit</string>
    <string name="hour_string"><![CDATA[%1$d hour %2$d minute]]></string>
    <string name="minute_string"><![CDATA[%1$d minute]]></string>
    <string name="under_minute_string"><![CDATA[Within 1 minute]]></string>
    <string name="meter_string" translatable="false"><![CDATA[%,.2f km]]></string>
    <string name="formeter_string"><![CDATA[%1$d m]]></string>
    <string name="hour_string_bottom"><![CDATA[%1$d:%2$d]]></string>
    <string name="meter_string_bottom"><![CDATA[%,.2f km]]></string>
    <string name="camera_error">카메라</string>
    <string name="use_default_camera">내장 카메라앱 사용</string>
    <string name="camera_face_guide">얼굴이 가이드라인 안에 오도록하여 촬영하세요.</string>
    <string name="camera_body_guide">전신이 가이드라인 안에 오도록하여 촬영하세요.</string>
    <string name="camera_comm_guide">촬영버튼을 길게누르면 타이머가 작동합니다.</string>
    <string name="camera_face_step1">정면</string>
    <string name="camera_face_step2">좌측면</string>
    <string name="camera_face_step3">우측면</string>
    <string name="camera_retry_shot_btn">다시찍기</string>
    <string name="camera_get_shot_btn">촬영</string>
    <string name="retry_base_camera">촬영을 다시 시도해 보세요.</string>
    <string name="can_not_use_to_camera">일시적으로 카메라를 사용할 수 없습니다. 앱을 다시 구동해보세요.</string>
    <string name="camera_detail_view_title">사진 (%1$s/%2$s)</string>
    <string name="notfound_camera_app">지정된 카메라 어플리케이션을 찾을 수 없습니다.</string>
    <string name="outofmemory_bitmap_size">이미지 크기가 너무 큽니다.\n촬영 옵션에서 이미지 크기를 줄여주시기 바랍니다.</string>
    <string name="unknownerror_bitmap_size">이미지 처리중 알수 없는 오류가 발생하였습니다.</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="toast_image_intent_null">이미지 가져오기 옵션이 잘못되었습니다.</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">CAMERA</string>
    <string name="lbl_choose_from_gallery">GALLERY</string>
    <string name="popup_other_choose_file">파일을 선택하세요</string>
    <string name="choose_file_error_file_type">이 형식의 파일을 열 수 없습니다.</string>
    <string name="choose_file_file_open_error">이 파일을 열 수 없습니다.</string>
    <string name="file_download_desc">%1$s 파일다운로드</string>
    <string name="camera_descript">사진을 촬영해 주세요</string>
    <string name="pick_image_intent_text">사진 가져올 방법을 선택하세요</string>
    <string name="send_to_title">공유방법을 선택하세요</string>
    <string name="text_share_intent_chooser">어떤 앱을 통해 공유하시겠습니까?</string>
    <string name="share_upload_image_fail">이미지공유 서버에 이미지 등록 오류입니다.</string>
    <string name="share_title">%1$s 앱을 설치해보세요</string>
    <string name="share_message">안녕하세요? 고철비철 중개 플랫폼 철스크랩입니다.</string>
    <string name="result_code_S01">성공</string>
    <string name="result_code_E01">오류입니다.</string>
    <string name="voice_tts_startup">Welcome to good valet parking service.</string>
    <string name="push_title">알려드립니다</string>
    <string name="push_message">새로운 변경사항이 있습니다. 앱을 확인해 주세요.</string>
    <string name="support_lang_01" translatable="false">한국어</string>
    <string name="support_lang_02" translatable="false">English</string>
    <string name="support_lang_03" translatable="false">中国</string>
    <string name="support_lang_04" translatable="false">台灣</string>
    <string name="support_lang_05" translatable="false">日本</string>
    <string name="support_lang_06" translatable="false">Deutsch</string>
    <string name="support_lang_07" translatable="false">Français</string>
</resources>