<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/conn_issue_wifi"
                android:tint="@color/theme_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/conn_issue_desc1"
                android:textColor="@color/Grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/conn_issue_desc2"
                android:textColor="@color/Grey"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_color"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/con_issue_btn_finish"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_new_white"
            android:text="@string/btn_finish"
            android:textColor="@color/DarkGrey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/con_issue_btn_retry"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_theme"
            android:text="@string/btn_renew"
            android:textColor="@color/White"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>