<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/cameraFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>
    
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp" >

        <ImageView
            android:id="@+id/camera_shot_area"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:src="@drawable/dotted" />

    </FrameLayout>

    <TextView
        android:id="@+id/camera_shot_guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/camera_face_guide"
        android:textColor="@color/White" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/camera_cancel_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_gray_bg"
            android:text="@string/btn_cancel"
            android:textColor="@color/White"
            android:textSize="16sp" />
        
        <Button
            android:id="@+id/camera_base_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_gray_bg"
            android:text="@string/btn_base_shoot"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <Button
            android:id="@+id/camera_shot_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_red_bg_ov"
            android:text="@string/btn_shot"
            android:textColor="@color/White"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="V1" />
 
</RelativeLayout>
