<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trans_space" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:background="@drawable/trans_space"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/attach_title_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_color"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cd_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:orientation="horizontal" >

            <ScrollView
                android:id="@+id/sub_view_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/listline" />

                        <TextView
                            android:id="@+id/cd_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/custom_dialog_default_mesg"
                            android:textColor="@color/DarkGrey" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="5dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:weightSum="3" >

                            <Button
                                android:id="@+id/cd_ok_btn"
                                android:layout_width="0dip"
                                android:layout_height="35dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_new"
                                android:text="@string/btn_yes"
                                android:textColor="#ffffff"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                            
                            <Button
                                android:id="@+id/cd_neutral_btn"
                                android:layout_width="0dip"
                                android:layout_height="35dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_new"
                                android:text="@string/btn_neutral"
                                android:textColor="#ffffff"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                            
                            <Button
                                android:id="@+id/cd_no_btn"
                                android:layout_width="0dip"
                                android:layout_height="35dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_new"
                                android:text="@string/btn_cancel"
                                android:textColor="#ffffff"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>