<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32.6dp"
        android:layout_marginRight="32.6dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/attach_title_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/theme_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cd_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/sub_view_scroll_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cd_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="36.6dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="36.6dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/app_name"
                            android:textColor="@color/DarkGrey"
                            android:textSize="16sp"
                            android:typeface="sans" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@drawable/dialog_line" />

                        <LinearLayout
                            android:id="@+id/popup_button_set_yn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:weightSum="2">

                            <Button
                                android:id="@+id/cd_no_btn"
                                android:layout_width="0dip"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_white"
                                android:text="@string/btn_no"
                                android:textColor="@color/theme_btn_color"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:typeface="sans" />

                            <Button
                                android:id="@+id/cd_ok_btn"
                                android:layout_width="0dip"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_dialog"
                                android:text="@string/btn_yes"
                                android:textColor="@color/White"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:typeface="sans" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/popup_button_set_ok"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:visibility="gone"
                            android:weightSum="1">

                            <Button
                                android:id="@+id/cd_close_btn"
                                android:layout_width="0dip"
                                android:layout_height="54dp"
                                android:layout_weight="1"
                                android:background="@drawable/selector_btn_dialog"
                                android:text="@string/btn_close"
                                android:textColor="@color/White"
                                android:textSize="17.4sp"
                                android:textStyle="bold"
                                android:typeface="sans" />

                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

            </ScrollView>


        </LinearLayout>
    </LinearLayout>


</FrameLayout>